# lesretrouvailles

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tailwind.config.js  tailwind.theme.json
.github/workflows/: test.yml
aide/: apps.py  faq.py  guide.py  urls.py  views.py
aide/tests/: conftest.py  test_faq_content.py  test_guide.py  test_views.py
alumni/: admin.py  asgi.py  cloudinary.py  email.py  logging.py  middleware.py  ratelimit.py  sessions.py  storage.py  urls.py  wsgi.py
alumni/settings/: base.py  dev.py  prod.py  staging.py
alumni/tests/: conftest.py  test_admin_lockdown.py  test_cloudinary_download.py  test_cloudinary_extensions.py  test_error_pages.py  test_infra_hardening.py  test_log_redaction.py  test_session_hardening.py  test_session_settings.py  test_storage.py
cooptation/: admin.py  apps.py  context_processors.py  emails.py  forms.py  models.py  services.py  urls.py  views.py
cooptation/migrations/: 0001_initial.py  0002_cooptationrequest.py  0003_knowledgequestion_questionnaireresponse.py  0004_adminapplication_questionnaire_token_and_more.py  0005_adminapplication_cooptation_expired_at.py  0006_adminapplication_referrer_and_more.py  0007_alter_adminapplication_classes.py  0008_application_classes_optional.py
cooptation/tests/: conftest.py  test_a11y.py  test_admin_actions.py  test_e2e_happy_path.py  test_email_backend.py  test_email_templates.py  test_models.py  test_parrain_dashboard.py  test_parrain_vouch_view.py  test_pending_vouches_count.py  test_process_deadlines.py  test_questionnaire_view.py  test_seed_questions.py  test_services.py  test_signup_utm.py  test_signup_view.py  test_smoke_test_command.py
core/: allauth_adapter.py  apps.py  context_processors.py  middleware.py  sitemaps.py  urls.py  views.py
core/templatetags/: active_link.py
core/tests/: test_a11y.py  test_active_link.py  test_allauth_templates.py  test_auth.py  test_backup_media.py  test_base_template.py  (+12 more)
docker/: entrypoint.sh
gestion/: apps.py  decorators.py  forms.py  urls.py  views.py
members/: admin.py  apps.py  context.py  emails.py  forms.py  models.py  search.py  services.py  signals.py  urls.py  views.py
memoires/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
memoriam/: admin.py  apps.py  context_processors.py  emails.py  forms.py  models.py  signals.py  urls.py  views.py
scripts/: apply_bucket_lifecycle.py  convert_class_rosters.py  generate_favicons.py  generate_og_image.py
static/: manifest.webmanifest
templates/: 403.html  403_csrf.html  404.html  500.html  base.html  robots.txt
(+304 files in other folders)
