[project]
name = "alumni"
version = "0.1.0"
description = "Plateforme Alumni CEG 1 Birni — Zinder"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.1",
    "psycopg[binary]>=3.1",
    "django-allauth>=0.61",
    "django-environ>=0.11",
    "whitenoise>=6.6",
    "gunicorn>=21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "djlint>=1.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "alumni.settings.dev"
python_files = ["test_*.py"]
addopts = "-q"
