[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alumni"
version = "0.1.0"
description = "Plateforme Alumni CEG 1 Birni — Zinder"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "psycopg[binary]>=3.1",
    "django-allauth>=65.0",
    "django-environ>=0.11",
    "whitenoise>=6.6",
    "gunicorn>=21",
    "cloudinary>=1.40",
    "django-ratelimit>=4.1",
    "markdown>=3.6",
    "bleach>=6.2",
    "boto3>=1.34",
    "redis>=5.0",
    "resend>=2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    # Formatters/linters are pinned EXACTLY: CI resolving a newer version
    # than pre-commit reformats with makes `--check` fail on files the hook
    # just wrote. Bump these deliberately, together with the
    # .pre-commit-config.yaml revs.
    "ruff==0.15.12",
    "pre-commit>=3.7",
    "djlint==1.36.4",
    # Dev-only: scripts/convert_class_rosters.py reads the class-roster .xlsx
    # workbooks. Never a runtime dep — production never touches those files.
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "freezegun>=1.5",
]
handbook = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
    "jinja2>=3.1",
]

[tool.setuptools]
# Every app in INSTALLED_APPS. gestion/memoires/memoriam/aide were missing,
# so a wheel or sdist build silently omitted four live apps (F-14).
# alumni/tests/test_infra_hardening.py keeps this in sync.
packages = [
    "alumni",
    "core",
    "members",
    "cooptation",
    "gestion",
    "memoires",
    "memoriam",
    "aide",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "alumni.settings.dev"
python_files = ["test_*.py"]
addopts = "-q"
